--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -19,7 +19,7 @@
     padding-bottom: 10px;
     h1 {
       font-weight: 900;
-      font-size: 44px;
+      font-size: 48px;
       color: $white-green;
       text-shadow: 0 0 10px $shine-yellow;
     }
@@ -43,8 +43,8 @@
     }
     &__post {
       h1 {
-        color: $deep-green-1;
-        font-size: 28px;
+        color: $pale-green-3;
+        font-size: 42px;
       }
       &__img {
         width: 100%;
