--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,7 @@
 $white-green: #dbe3db; 
 $pale-green-1: #dee3db; 
 $pale-green-2: #b7c8b7; 
+$pale-green-3: #7c916f; 
 $deep-green-1: #6b8147; 
 $deep-green-2: #536c53; 
 $black-green: #1f241c; 
