--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,60 +1,5 @@
 @import 'colors.scss';
 @import 'layout.scss';
+@import 'buttonGroup.scss';
+@import 'blog.scss';
 
-.blog {
-  text-align: left;
-  background-color: $pale-green-2;
-  font-family: 'Roboto', sans-serif;
-  color: $black-green;
-  &__header, &__body, &__footer {
-    &__container {
-      max-width: 800px;
-      margin: auto;
-    }
-  }
-
-  &__header {
-    background-image: linear-gradient(to bottom right, $deep-green-2, $shine-yellow);
-    padding-top: 40px;
-    padding-bottom: 10px;
-    h1 {
-      font-weight: 900;
-      font-size: 48px;
-      color: $white-green;
-      text-shadow: 0 0 10px $shine-yellow;
-    }
-
-    &__search {
-      height: 30px;
-      border-radius: 15px;
-      border: none;
-      padding: 5px;
-      background-color: $deep-green-1;
-      color: $pale-green-2;
-    }
-  }
-  &__body {
-    &__postinfo { 
-      padding: 5px;
-      border-radius: 2px;
-      background-color: $pale-green-1;
-      font-size: smaller;
-      color: $deep-green-2;
-    }
-    &__post {
-      h1 {
-        color: $pale-green-3;
-        font-size: 42px;
-      }
-      &__img {
-        width: 100%;
-        display: block;
-        background-color: black;
-      }
-    }
-    
-  }
-  &__footer {
-    background-color: $pale-green-1;
-  }
-}
