--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     &__item {
         align-self: auto;
         &--pull-end {
@@ -9,3 +10,9 @@
         }
     }
 }
+
+.truncated-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
