--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -21,6 +21,7 @@
         color: $white-green;
         text-shadow: 0 0 10px $shine-yellow;
         margin: 0;
+        cursor: pointer;
       }
   
       &__search {
